k8s/ingress-rent-dashboard-paste.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rent-api-algorycode-rent-service
  namespace: rent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rent.algorycode.com
      secretName: rent-algorycode-tls
  rules:
    - host: rent.algorycode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rent-api-algorycode-rent-service
                port:
                  number: 8090
